src/app/components/todo-item/todo-item.component.sass
@import "variables"
$item-padding: 10px

.todo-item
	display: flex
	flex-flow: row nowrap
	border-radius: 5px
	background-color: $dark-grey
	overflow: hidden
	margin-bottom: 10px

.reorder-handle
	margin-right: 20px
	padding: $item-padding 0 $item-padding $item-padding
	flex-grow: 0
	cursor: pointer

.item-content
	display: flex
	flex-flow: column nowrap
	padding: $item-padding 0
	flex-grow: 1
	input
		width: 100%
		border: 0
		background-color: $dark-grey
		padding: 10px
		color: white
		border-bottom: 1px solid white

	input:focus, textarea:focus
		outline: 0

	textarea
		resize: none
		padding: 10px
		width: 100%
		height: 200px
		color: white
		border: 0
		background-color: $dark-grey
		border-radius: 5px

.item-title
	font-weight: bold

.item-body
	max-height: 0
	overflow: hidden

.delete-button
	display: flex
	align-items: center
	justify-content: center
	background: red
	overflow: hidden
	flex-grow: 0
	min-width: 60px

.edit-button
	display: flex
	align-items: center
	justify-content: center
	margin-left: 10px
	background: #3477F5
	overflow: hidden
	flex-grow: 0
	min-width: 60px

.drag-placeholder
	height: 0
	border-bottom: 2px solid white

